#3: api ручки по созданию и просмотру продуктов

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,5 @@
 PROJECT_NAME = "urban-octo-engine"
+PROJECT_DIR = "app"
 
 HOST ?= 127.0.0.1
 PORT ?= 8000
@@ -41,23 +42,23 @@ isort:
 	isort .
 
 flake8:
-	pflake8 .
+	flake8 .
 
 djlint:
 	djlint . --extension=html --reformat
 
 prep_migration:
-	python payment/manage.py makemigrations payments
-	@echo "Now run: python payment/manage.py sqlmigrate payments XXXX"
+	python ${PROJECT_DIR}/manage.py makemigrations ${PROJECT_NAME}
+	@echo "Now run: python ${PROJECT_DIR}/manage.py sqlmigrate ${PROJECT_NAME} XXXX"
 
 migrate:
-	python payment/manage.py migrate
+	python ${PROJECT_DIR}/manage.py migrate
 
 collectstatic:
-	python payment/manage.py collectstatic --noinput
+	python ${PROJECT_DIR}/manage.py collectstatic --noinput
 
 run:
-	cd payment && gunicorn main.wsgi --bind "$(HOST):$(PORT)" --workers 7 --timeout 800
+	cd ${PROJECT_DIR} && gunicorn --bind ${HOST}:${PORT} main.wsgi:application --workers 7 --timeout 800
 
 clear:
 	find . -name \*.pyc -delete
