--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ django-environ = "^0.11.2"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 gunicorn = "^21.2.0"
+django-cors-headers = "^4.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
