--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,11 +5,16 @@
 #    pip-compile --output-file=requirements.txt pyproject.toml
 #
 asgiref==3.8.1
-    # via django
+    # via
+    #   django
+    #   django-cors-headers
 django==4.2.16
     # via
+    #   django-cors-headers
     #   djangorestframework
     #   urban-octo-engine (pyproject.toml)
+django-cors-headers==4.4.0
+    # via urban-octo-engine (pyproject.toml)
 django-environ==0.11.2
     # via urban-octo-engine (pyproject.toml)
 djangorestframework==3.15.2
