--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 gunicorn = "^21.2.0"
 django-cors-headers = "^4.4.0"
+pytest = "^8.3.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
