--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "vue": "^3.4.29"
+    "pinia": "^2.2.2",
+    "sass-embedded": "^1.78.0",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
